assets/styles/committeeTransitions.scss
.committee-container {
  display: flex;
  justify-content: space-evenly;
}

@media (max-width: 500px) {
  .committee-container {
    flex-direction: column;
  }
}

.committee {
  h3 {
    margin: 0;
    padding: 0;
    font-weight: bold;
  }

  p {
    margin: 0 !important;
    padding: 0 !important;
    line-height: 1 !important;
  }

  .committeeMemberImage {
    img {
      height: 150px !important;
      width: 150px !important;
      border-radius: 50%;
    }

    height: 150px !important;
    width: 150px !important;
    margin: 0 0 5px;
    padding: 0;
    position: relative;

    display: flex;
    justify-content: center;
    align-content: center;
  }

  &.flippable .committeeMemberImage {
    img {
      -webkit-backface-visibility: hidden; /* Safari */
      backface-visibility: hidden;

      transition: transform .3s ease-in-out;
      transform: rotateX(0deg);
      transform-origin: center;
    }

    img:last-child {
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      margin: auto;
      transform: rotateX(180deg);
    }
  }
}

.committee.flippable:hover .committeeMemberImage {
  img:first-child {
    transform: rotateX(180deg);
  }

  img:last-child {
    transform: rotateX(0deg);
  }
}

